--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="grumblr">
   <head>
+    <!-- <base href="/" target="_blank"> -->
     <title>Angular</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.2/angular-resource.min.js"></script>
 
+    <script>
+      var grumbles = [
+        {
+          title: "I am Grumble One"
+        },
+        {
+          title: "I'm another Grumble"
+        }
+      ]
+    </script>
     <script src="js/app.js"></script>
   </head>
   <body>
     <h1>Grumblr</h1>
 
+    <div ui-view></div>
   </body>
 </html>
